--- a/style.css
+++ b/style.css
@@ -77,19 +77,10 @@ html {
   float: left;
 }
 
-.projecttab .dropbtn {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.projecttab:hover .dropbtn {
+.topnav a:hover,
+.projecttab:hover .left-side {
   background-color: #ddd;
+  color: black;
 }
 
 .projectlist {
@@ -188,7 +179,47 @@ p {
 }
 
 #contactmebr {
-  margin-bottom: 1000px;
+  line-height: 100px;
+}
+
+/* Contact Me Form */
+
+label {
+  margin-left: 48px;
+}
+
+input[type="text"],
+select,
+textarea {
+  width: 93%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  margin-left: 48px;
+  resize: vertical;
+}
+
+input[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px 20px;
+  margin-left: 48px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
 /* Tag Location Shift */
