--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ html {
   display: block;
 }
 
+/*
 #maillogo {
   content: url("white circled email icon.png");
   height: 33px;
@@ -89,6 +90,7 @@ html {
   margin-bottom: -3px;
   display: block;
 }
+*/
 
 /* Drop Down */
 
