--- a/style.css
+++ b/style.css
@@ -161,17 +161,23 @@ p {
   margin-bottom: 1000px;
 }
 
-/*
-#me {
-  padding-top: 30px;
-  width: 504px;
-  height: 672px;
+#imageme {
+  padding-top: 50px;
+  width: 378px;
+  height: 504px;
 }
-*/
 /* Original size 3024 x 4032 divded by 8 */
 
 #name {
   font-size: 72px;
+  margin-bottom: 200px;
+}
+
+#amdlogo {
+  position: relative;
+  top: 50px;
+  margin-bottom: 50px;
+  z-index: -1;
 }
 
 #efilogo {
